--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         // Verificar se o usuário já está autenticado
         if (sessionStorage.getItem('isAuthenticated') === 'true') {
             // Redirecionar para a página de controle
-            window.location.href = '/menu.html';
+            window.location.href = 'menu.html';
         }
     </script>
 </head>
@@ -58,7 +58,7 @@
                 // Armazenar a chave de sessão no sessionStorage
                 sessionStorage.setItem('isAuthenticated', 'true');
                 // Redirecionar para a página de controle
-                window.location.href = '/menu.html';
+                window.location.href = 'menu.html';
             } else {
                 errorMessage.textContent = 'Usuário ou senha incorretos.';
                 errorMessage.style.display = 'block';
