--- a/manual.html
+++ b/manual.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- Botão de Voltar ao Menu Principal -->
-        <button class="back-button" onclick="goToMenu()">Voltar ao Menu Principal</button>
+        <button class="back-button" onclick="goToMenu(/webapp-saferobot/menu.html)">Voltar ao Menu Principal</button>
     </div>
 
     <script>
