--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
         // Verifica se o usuário está autenticado
         if (sessionStorage.getItem('isAuthenticated') !== 'true') {
             // Se não estiver autenticado, redireciona para a página de login
-            window.location.href = '/';
+            window.location.href = '/webapp-saferobot/index.html';
         }
 
         // Função para navegar para outras páginas (modificar conforme necessário)
