--- a/manual.html
+++ b/manual.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="webapp-saferobot/styles.css">
     <title>Modo Manual - Controle do Robô</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
