--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
         </div>
         <div class="menu">
             <button class="btn" onclick="goTo('Semiautônomo')">Modo Semiautônomo</button>
-            <button class="btn" onclick="goTo('/webapp-saferobot/manual.html')">Modo Manual</button>
+            <button class="btn" onclick="goTo('manual.html')">Modo Manual</button>
             <button class="btn" onclick="goTo('Manutenção')">Manutenção</button>
             <button class="btn-logout" onclick="logout()">Logout</button>
         </div>
@@ -27,7 +27,7 @@
         // Verifica se o usuário está autenticado
         if (sessionStorage.getItem('isAuthenticated') !== 'true') {
             // Se não estiver autenticado, redireciona para a página de login
-            window.location.href = '/webapp-saferobot/index.html';
+            window.location.href = 'index.html';
         }
 
         // Função para navegar para outras páginas (modificar conforme necessário)
@@ -40,7 +40,7 @@
             // Remove a autenticação da sessão
             sessionStorage.removeItem('isAuthenticated');
             // Redirecionar para a página de login
-            window.location.href = '/webapp-saferobot/index.html';
+            window.location.href = 'index.html';
         }
     </script>
 </body>
